--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <body>
     <div class="wrapper">
       <div class="number-hours"></div>
+
+      <div class="hands-box">
+        <div class="hand hours"><i></i></div>
+        <div class="hand minutes"><i></i></div>
+        <div class="hand seconds"><i></i></div>
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
